tkg_tmc_to/cluster-3-vendor/06-httpbin.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tanzu-sample-app
  labels:
    app: httpbin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: httpbin
  name: httpbin
  namespace: tanzu-sample-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
        - image: yogendra/httpbin
          name: httpbin
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 250Mi

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpbin
  name: httpbin
  namespace: tanzu-sample-app
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: httpbin
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: httpbin
  namespace: tanzu-sample-app
  labels:
    app: httpbin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: contour
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - secretName: httpbin-https-secret
      hosts:
        - httpbin.cluster-3.poc.yogendra.me
  rules:
    - host: httpbin.cluster-3.poc.yogendra.me
      http:
        paths:
          - backend:
              serviceName: httpbin
              servicePort: 80
